--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -30,7 +30,7 @@
     "@nestjs/platform-socket.io": "7.6.18",
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "^9.0.1",
-    "@nestjs/websockets": "7.6.18",
+    "@nestjs/websockets": "^9.2.0",
     "algoliasearch": "^4.14.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
