--- a/apps/user/package.json
+++ b/apps/user/package.json
@@ -27,7 +27,7 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/platform-socket.io": "7.6.18",
+    "@nestjs/platform-socket.io": "^9.2.0",
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.2.0",
