--- a/apps/contatec-frontend/package.json
+++ b/apps/contatec-frontend/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "check-types": "tsc"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.3",
@@ -29,7 +30,7 @@
     "@testing-library/user-event": "^13.1.9",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
-    "@types/react": "17.0.7",
+    "@types/react": "17.0.11",
     "@types/react-dom": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
